# dwarf-ng

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  README.md  README.txt  VERSION  autogen.sh  configure.ac  configure.in  lang.h  lang.l  lang.y  lang2.c  look_debug.c  look_debug.h  macho.h  main.c  main.h  utils.c  utils.h  vars.c  vars.h
BK_OLD_DATA/: BUGS  configure.ac
BK_OLD_DATA/distros/debian/: rules
BK_OLD_DATA/distros/macports/: Portfile
BK_OLD_DATA/doc/: xdwarf.man.html
BK_OLD_DATA/src/: Makefile.am
BK_OLD_DATA/src/cmdline/: repl.c  sh_pe_utils.h  sh_switchers.c
BK_OLD_DATA/src/libdwarf/: Makefile.am  cfglang.l  dw_elf_utils.h  dwarfrc  pe.h  vars.h
distros/MacPorts/: Portfile  Portfile-0.3.0  Portfile-0.3.1
distros/debian/: changelog  control  copyright  debHowto  rules  watch
distros/gentoo/app-misc/dwarf/: dwarf-0.3.0.ebuild
distros/gentoo/dev-util/dwarf/: dwarf-0.3.0.ebuild  dwarf-0.3.1.ebuild
distros/macports/: Portfile
doc/: Makefile  Makefile.am  dwarf.man  dwarf.man.html  nn_rfc.txt  xdwarf.man.html
src/: Makefile  Makefile.am  cfglang.l  cfglang.y  config.h  dw_elf_utils.c  dw_elf_utils.h  dw_macho_utils.c  dw_macho_utils.h  dw_pe_utils.c  dw_pe_utils.h  dw_readline_completion.c  dw_readline_completion.h  dw_switchers.c  dw_switchers.h  dwarfrc  elf.h  lang.h  lang.l  lang.y  lang2.c  libdwarf.c  libdwarf.h  look_debug.c  macho.h  main.c  main.h  mzexe.h  output.c  output.h  pe.h  repl.c  repl.h  sh_elf_utils.c  sh_elf_utils.h  sh_macho_utils.c  sh_macho_utils.h  sh_pe_utils.c  sh_pe_utils.h  sh_switchers.c  (+8 more)
src/cmdline/: Makefile.am  dw_readline_completion.c  dw_readline_completion.h  main.c  output.c  output.h  repl.c  repl.h  sh_elf_utils.c  sh_macho_utils.c  sh_macho_utils.h  sh_pe_utils.c  sh_switchers.h  shlang.l  shlang.y
src/libdwarf/: Makefile.am  cfglang.l  cfglang.y  dw_elf_utils.c  dw_macho_utils.c  dw_macho_utils.h  dw_pe_utils.c  dw_pe_utils.h  dw_switchers.c  dw_switchers.h  elf.h  libdwarf.c  libdwarf.h  macho.h  mzexe.h  utils.c  utils.h
trumk/: AUTHORS  BUGS  Makefile.am  autogen.sh
trumk/doc/: Makefile.am  dwarf.man
trumk/src/: dw_macho_utils.c  dw_pe_utils.h  dw_readline_completion.c  dw_readline_completion.h  macho.h  main.c  main.h  output.c  output.h  pe.h  stdint.h  utils.c  vars.h
