AUTOMAKE_OPTIONS = nostdinc no-dependencies
SUBDIRS = src doc

EXTRA_DIST=VERSION BUGS  COPYING  FAQ.TXT  INSTALL  README README.FIRST TODO \
        Makefile.am configure.ac configure \
        AUTHORS ChangeLog NEWS aclocal.m4 config.h.in \
        autogen.sh \
        depcomp missing install-sh

# mhmhmhm
CLEANFILES = autom4te.cache

srcdir = src
