AUTOMAKE_OPTIONS = nostdinc no-dependencies
SUBDIRS = src doc
dist_doc_DATA= VERSION BUGS AUTHORS ChangeLog FAQ.TXT INSTALL README README.FIRST TODO
EXTRA_DIST= COPYING \
        Makefile.am configure.ac configure \
        NEWS aclocal.m4 config.h.in \
        autogen.sh \
        depcomp missing install-sh

# mhmhmhm
CLEANFILES = autom4te.cache

srcdir = src

distdir=./$(PACKAGE)-$(VERSION)
